messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    version: blue   # Initially routes to blue
  ports:
  - port: 8000
    targetPort: 8000
